tests/fixtures/fail/region_undeclared_parameter.sc
let read(borrow('a) value: i32): i32 = value
let main(): i32 = 42
